Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19480

TreeView with checkboxes wrongly displays multiple selected items

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Wine
    • None

    Description

      In Start Menu customization, there is a tree-view control with checkboxes.
      Checking some items displays multiple selected items. This behavior is wrong.

      20240311-0.4.15-dev-7761-treeview-selection-display-is-wrong-on-checking-items.png

      Attachments

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            katayama_hirofumi_mz Katayama Hirofumi MZ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: